Fix YouTube embeds and image truncation

--- a/src/index.css
+++ b/src/index.css
@@ -131,8 +131,10 @@
   padding-bottom: 56.25%; /* 16:9 aspect ratio */
   height: 0;
   overflow: hidden;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
+  background-color: #f5f5f5;
 }
 
 .youtube-featured {
@@ -146,15 +148,21 @@
   background-color: #000;
 }
 
-/* Video embed container */
-.aspect-w-16 {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
+/* YouTube embed container */
+.youtube-embed-container {
+  width: 100%;
+  margin: 1.5rem 0;
 }
 
-.aspect-w-16 > iframe {
+.aspect-w-16 {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  width: 100%;
+}
+
+.aspect-w-16 iframe {
   position: absolute;
   top: 0;
   left: 0;
